fix main css alignment

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -11,6 +11,7 @@ main {
     gap: 20px;
     height: calc(100vh - 100px - 40px);
     overflow-y: scroll;
+    justify-self: center;
 }
 
 app-add-edit-work-time-note-entity {
